Imporve backward compatibility for Java 8